# v4l2-mmal-cap

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  encoder.cpp  encoder.h  main.cpp  pack-kodi-addon.cmake.in
kodi-addon/: addon.py  addon.xml
kodi-addon/resources/: settings.xml
kodi-addon/resources/language/English/: strings.po
